// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assemble Space extension's version not match 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        发 布
      </span>
    </button>
  </header>
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          className="ant-list ant-list-split ant-list-grid"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-list-empty-text"
              >
                <div
                  className="ant-empty ant-empty-normal"
                >
                  <div
                    className="ant-empty-image"
                  >
                    <svg
                      className="ant-empty-img-simple"
                      height="41"
                      viewBox="0 0 64 41"
                      width="64"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fillRule="evenodd"
                        transform="translate(0 1)"
                      >
                        <ellipse
                          className="ant-empty-img-simple-ellipse"
                          cx="32"
                          cy="33"
                          rx="32"
                          ry="7"
                        />
                        <g
                          className="ant-empty-img-simple-g"
                          fillRule="nonzero"
                        >
                          <path
                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                          />
                          <path
                            className="ant-empty-img-simple-path"
                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                  <div
                    className="ant-empty-description"
                  >
                    No Data
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content"
    >
      装配空间
    </main>
  </section>
</section>
`;

exports[`Assemble Space has multiple implements of extension protocol 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        发 布
      </span>
    </button>
  </header>
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          className="ant-list ant-list-split ant-list-grid"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-list-empty-text"
              >
                <div
                  className="ant-empty ant-empty-normal"
                >
                  <div
                    className="ant-empty-image"
                  >
                    <svg
                      className="ant-empty-img-simple"
                      height="41"
                      viewBox="0 0 64 41"
                      width="64"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fillRule="evenodd"
                        transform="translate(0 1)"
                      >
                        <ellipse
                          className="ant-empty-img-simple-ellipse"
                          cx="32"
                          cy="33"
                          rx="32"
                          ry="7"
                        />
                        <g
                          className="ant-empty-img-simple-g"
                          fillRule="nonzero"
                        >
                          <path
                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                          />
                          <path
                            className="ant-empty-img-simple-path"
                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                  <div
                    className="ant-empty-description"
                  >
                    No Data
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content"
    >
      装配空间
    </main>
  </section>
</section>
`;

exports[`Assemble Space has zero implement of extension protocol 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        发 布
      </span>
    </button>
  </header>
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          className="ant-list ant-list-split ant-list-grid"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-list-empty-text"
              >
                <div
                  className="ant-empty ant-empty-normal"
                >
                  <div
                    className="ant-empty-image"
                  >
                    <svg
                      className="ant-empty-img-simple"
                      height="41"
                      viewBox="0 0 64 41"
                      width="64"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fillRule="evenodd"
                        transform="translate(0 1)"
                      >
                        <ellipse
                          className="ant-empty-img-simple-ellipse"
                          cx="32"
                          cy="33"
                          rx="32"
                          ry="7"
                        />
                        <g
                          className="ant-empty-img-simple-g"
                          fillRule="nonzero"
                        >
                          <path
                            d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                          />
                          <path
                            className="ant-empty-img-simple-path"
                            d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                  <div
                    className="ant-empty-description"
                  >
                    No Data
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content"
    >
      装配空间
    </main>
  </section>
</section>
`;

exports[`Assemble Space show extensions 1`] = `
<section
  className="ant-layout"
>
  <header
    className="ant-layout-header"
  >
    <button
      className="ant-btn ant-btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        发 布
      </span>
    </button>
  </header>
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          className="ant-list ant-list-split ant-list-grid"
        >
          <div
            className="ant-spin-nested-loading"
          >
            <div
              className="ant-spin-container"
            >
              <div
                className="ant-row"
                style={
                  Object {
                    "marginLeft": -8,
                    "marginRight": -8,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "maxWidth": "33.333333333333336%",
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <div
                    className="ant-col"
                    style={
                      Object {
                        "flex": "1 1 auto",
                        "paddingLeft": 8,
                        "paddingRight": 8,
                      }
                    }
                  >
                    <div
                      className="ant-list-item"
                    >
                      <div
                        className="ant-card ant-card-bordered"
                        style={
                          Object {
                            "width": "200px",
                          }
                        }
                      >
                        <div
                          className="ant-card-cover"
                        >
                          <img
                            src="i1"
                          />
                        </div>
                        <div
                          className="ant-card-body"
                          style={Object {}}
                        >
                          <div
                            className="ant-card-meta"
                          >
                            <div
                              className="ant-card-meta-detail"
                            >
                              <div
                                className="ant-card-meta-title"
                              >
                                a
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content"
    >
      装配空间
    </main>
  </section>
</section>
`;
